review 삭제 기능 구현

--- a/src/main/resources/templates/review/createReview.html
+++ b/src/main/resources/templates/review/createReview.html
@@ -10,7 +10,8 @@
             <!-- Add New Post Form -->
             <div class="card card-small mb-3">
                 <div class="card-body">
-                    <form class="add-new-post" th:action="@{/review/create}" th:object="${reviewForm}" method="post">
+                    <form class="add-new-post" th:action="@{''}" th:object="${reviewForm}" method="post">
+
 
                         <legend>Review</legend>
 
