--- a/src/main/resources/templates/spot/spotList.html
+++ b/src/main/resources/templates/spot/spotList.html
@@ -88,7 +88,7 @@
         <div class="row">
             <div th:each="spot : ${spotDtoList}" class="col-lg-3 col-md-6 col-sm-12 mb-4">
                 <div class="card card-small card-post h-100">
-                    <div class="card-post__image" th:style="'background-image: url(https://picsum.photos/800);'"></div>
+                    <div class="card-post__image" th:style="'background-image: url(..' + ${spot.thumbNailImgPath} + ');'"></div>
                     <div class="card-body">
                         <div class="form-row">
                             <h5 class="card-title col">
