Plan entity에 startDate, endDate 추가

--- a/src/main/resources/templates/design/map/new_plan.html
+++ b/src/main/resources/templates/design/map/new_plan.html
@@ -48,13 +48,13 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="input_from">From</label>
-                            <input type="text" class="form-control" id="input_from" name="start_date" placeholder="Start Date">
+                            <input type="text" class="form-control" id="input_from" name="startDate" placeholder="Start Date">
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="input_from">To</label>
-                            <input type="text" class="form-control" id="input_to" name="end_date" placeholder="End Date">
+                            <input type="text" class="form-control" id="input_to" name="endDate" placeholder="End Date">
                         </div>
                     </div>
 <!--                    <script th:src="@{/calendar-15/js/jquery-3.3.1.min.js}"></script>-->
